--- a/assets/i18n/idea/it.json
+++ b/assets/i18n/idea/it.json
@@ -154,7 +154,10 @@
         "TEAM_CALENDARS_HINT": "Questi calendari e i loro appuntamenti sono visibili all'intero team",
         "TEAM_CALENDAR_HINT": "Questi calendari e i loro appuntamenti sono visibili all'intero team",
         "USERS_ALLOWED_TO_MANAGE_APPOINTMENTS": "Utenti che possono gestire gli appuntamenti",
-        "WHO_CAN_MANAGE_APPOINTMENTS": "Chi può gestire gli appuntamenti"
+        "WHO_CAN_MANAGE_APPOINTMENTS": "Chi può gestire gli appuntamenti",
+        "SET_AS_DEFAULT": "Rendi predefinito",
+        "SET_AS_DEFAULT_HINT": "Seleziona il calendario come predefinito: sarà il primo a essere suggerito in agenda",
+        "DEFAULT": "Predefinito"
       },
       "DAY": "Giorno",
       "MONTH": "Mese",
