--- a/assets/i18n/idea/en.json
+++ b/assets/i18n/idea/en.json
@@ -472,7 +472,8 @@
       "SIGNATORY": "Signatory",
       "SIGNATURE": "Signature",
       "SIGNATURE_EXPLANATION": "Draw the signature here below",
-      "VERIFY_SIGNATORY_AND_SIGNATURE": "Verify signatory and signature"
+      "VERIFY_SIGNATORY_AND_SIGNATURE": "Verify signatory and signature",
+      "SIGNATURE_IS_TOO_COMPLEX": "The signature is too complex; please sign again"
     },
     "STRIPE": {
       "AUTHORIZATION_CHECK_TEXT": "to send instructions to the financial institution that issued my card to take payments from my card account in accordance with the terms of the service.",
