--- a/assets/i18n/idea/it.json
+++ b/assets/i18n/idea/it.json
@@ -355,6 +355,13 @@
       "VARIABLES_AVAILABLE": "Variabili disponibili",
       "VARIABLES_AVAILABLE_I": "Queste sono le variabili che puoi usare in oggetto e contenuto dell'email. All'invio di un'email verranno sostituite dai loro valori."
     },
+    "FTTT": {
+      "FROM": "Dalle",
+      "TO": "Alle",
+      "AM": "Mattina",
+      "PM": "Pomeriggio",
+      "MINUTES_PREFERENCE": "Preferenza minuti"
+    },
     "LABELER": {
       "EXPLANATION": "Solo la traduzione nella lingua di default è obbligatoria. Se una qualsiasi traduzione è mancante, verrà usata quella nella lingua di default.",
       "FILL_IN_DEFAULT_LANGUAGE": "Devi compilare almeno nella lingua di default",
