Major changes in IDEA Teams&co #27

--- a/assets/i18n/idea/it.json
+++ b/assets/i18n/idea/it.json
@@ -544,7 +544,8 @@
       "IS_OWNER": "È l'attuale proprietario del team",
       "KICK_OUT": "Rimuovi l'utente dal team",
       "MAIN_EXPLANATION": "Gli utenti del tuo team. Puoi gestire i loro permessi o aggiungere nuovi utenti",
-      "MANAGE_PERMISSIONS": "Configura permessi",
+      "MAKE_USER_ADMIN": "Rendi l'utente amministratore",
+      "REMOVE_ADMIN_ROLE": "Rimuovi il ruolo di amministratore",
       "MEMBERS": "Membri",
       "NEW_TEAM": "Nuovo team",
       "OWNER": "Proprietario",
@@ -553,15 +554,28 @@
       "SELECT_NAME_FOR_NEW_TEAM": "Scegli un nome",
       "SELECT_TEAM_": "Seleziona il team {{team}}",
       "TEAM_MEMBERS": "Membri del team",
-      "TEAM_MEMBERS_HINT": "Gestisci i membri del team {{team}}",
+      "MANAGE_TEAM_MEMBERS": "Gestisci i membri",
       "TEAM_NAME": "Nome del team",
-      "TEAM_NOT_ACTIVATED_DISCLAIMER": "Il team non è ancora stato attivato; contatta un amministratore",
+      "TEAM_NOT_ACTIVATED_DISCLAIMER": "Il team non è stato attivato per questo prodotto; contatta un amministratore",
+      "ACTIVE_ON": "Attivo su",
+      "TAP_TO_ACTIVATE_ON_PROJECT_": "Tocca per attivare il team su {{project}}!",
       "TEAM_SETTINGS": "Impostazioni del team {{team}}",
       "UNJOIN": "Lascia il team",
       "USER_NOT_FOUND_OR_ALREADY_JOINED": "Operazione fallita; verifica che l'utente non sia già  parte del team",
       "USER_REMOVED": "Utente rimosso",
       "YOU_NEED_A_TEAM_TO_CONTINUE": "Hai bisogno di un team per continuare",
-      "NO_TEAMS_AVAILABLE": "Non hai team disponibili"
+      "NO_TEAMS_AVAILABLE": "Non hai team disponibili",
+      "PROJECTS_NAMES": {
+        "arthur": "Arthur",
+        "luigi": "Luigi",
+        "orazio": "Horace",
+        "scarlett": "Scarlett"
+      },
+      "ACTIONS_ON_TEAM_": "Azioni su {{team}}",
+      "DELETE_TEAM": "Elimina il team",
+      "DEACTIVATE_FIRST_TEAM_FROM_PROJECTS": "Per procedere devi disattivare il team da tutti i prodotti",
+      "TEAM_DELETION_ARE_YOU_SURE": "Non sarai più in grado di recuperare i dati legati al team. L'operazione è irreversibile!",
+      "YOUR_CURRENT_PASSWORD": "Password dell'utente attuale"
     },
     "UPDATE": {
       "CLOSE_THE_APP_TO_UPDATE": "Chiudi completamente l'app o il browser per installare l'aggiornamento",
