--- a/assets/i18n/idea/en.json
+++ b/assets/i18n/idea/en.json
@@ -544,7 +544,8 @@
       "IS_OWNER": "The user is the current owner of the team",
       "KICK_OUT": "Kick-out the user",
       "MAIN_EXPLANATION": "The users in your team. You can manage their permissions and add new users",
-      "MANAGE_PERMISSIONS": "Manage the permissions",
+      "MAKE_USER_ADMIN": "Make the user administrator",
+      "REMOVE_ADMIN_ROLE": "Remove the administrator role",
       "MEMBERS": "Members",
       "NEW_TEAM": "New team",
       "OWNER": "Owner",
@@ -553,15 +554,28 @@
       "SELECT_NAME_FOR_NEW_TEAM": "Choose a name",
       "SELECT_TEAM_": "Select team {{team}}",
       "TEAM_MEMBERS": "Team members",
-      "TEAM_MEMBERS_HINT": "Manage the members of team {{team}}",
+      "MANAGE_TEAM_MEMBERS": "Manage the members",
       "TEAM_NAME": "Team name",
-      "TEAM_NOT_ACTIVATED_DISCLAIMER": "Team has not been activated yet; contact an administrator.",
+      "TEAM_NOT_ACTIVATED_DISCLAIMER": "Team has not been activated for this product; contact an administrator.",
+      "ACTIVE_ON": "Active on",
+      "TAP_TO_ACTIVATE_ON_PROJECT_": "Tap to activate the team on {{project}}!",
       "TEAM_SETTINGS": "Configure the settings of team {{team}}",
       "UNJOIN": "Leave the team",
       "USER_NOT_FOUND_OR_ALREADY_JOINED": "The user is already part of the team",
       "USER_REMOVED": "User removed",
       "YOU_NEED_A_TEAM_TO_CONTINUE": "You need a team to continue",
-      "NO_TEAMS_AVAILABLE": "You have no teams available"
+      "NO_TEAMS_AVAILABLE": "You have no teams available",
+      "PROJECTS_NAMES": {
+        "arthur": "Arthur",
+        "luigi": "Luigi",
+        "orazio": "Horace",
+        "scarlett": "Scarlett"
+      },
+      "ACTIONS_ON_TEAM_": "Actions on {{team}}",
+      "DELETE_TEAM": "Delete team",
+      "DEACTIVATE_FIRST_TEAM_FROM_PROJECTS": "To proceed, you must deactivate the team from all the products",
+      "TEAM_DELETION_ARE_YOU_SURE": "You won't be able to recover the data related to the team anymore. The operation is irreversible!",
+      "YOUR_CURRENT_PASSWORD": "Password of the current user"
     },
     "UPDATE": {
       "CLOSE_THE_APP_TO_UPDATE": "Close completely the app or the browser to install the update",
