--- a/assets/i18n/idea/it.json
+++ b/assets/i18n/idea/it.json
@@ -473,7 +473,9 @@
       "NO_ELEMENTS_FOUND_START_TYPING_TO_ADD_ONE": "Nessun elemento trovato; comincia a digitare per aggiungerne uno.",
       "SEARCH": "Ricerca",
       "SELECT_": "Seleziona {{suggestion}}",
-      "TAP_TO_FILTER": "Tocca per filtrare"
+      "TAP_TO_FILTER": "Tocca per filtrare",
+      "SHOW_DETAILS": "Mostra dettagli",
+      "HIDE_DETAILS": "Nascondi dettagli"
     },
     "SIGNATURE": {
       "CANCEL": "Annulla",
