Agenda: calendars management

--- a/assets/i18n/idea/it.json
+++ b/assets/i18n/idea/it.json
@@ -54,7 +54,70 @@
     "AGENDA": {
       "DAY": "Giorno",
       "MONTH": "Mese",
-      "WEEK": "Settimana"
+      "WEEK": "Settimana",
+      "CALENDARS": {
+        "ACCESS_LEVELS": {
+          "0": "Vedi solo stato libero/occupato",
+          "1": "Vedi dettagli (sola lettura)",
+          "2": "Inserimento e modifica appuntamenti",
+          "3": "Permessi completi"
+        },
+        "ADD_A_CALENDAR": "Aggiungi un calendario",
+        "ADD_CALENDAR_HINT": "Aggiungi un nuovo calendario",
+        "BASED_ON_EXTERNAL_SERVICE_SHARING_PERMISSION": "Da permessi di condivisione del servizio esterno",
+        "CALENDARS": "Calendari",
+        "CALENDAR_CREATED": "Calendario creato",
+        "CALENDAR_DELETED": "Calendario eliminato",
+        "CALENDAR_LINKED": "Calendario collegato",
+        "CALENDAR_NOT_YET_LINKED": "Calendario non ancora collegato",
+        "CALENDAR_NOT_YET_LINKED_HINT": "Il calendario non è ancora collegato con il servizio esterno: seleziona il calendario e procedi con l'operazione",
+        "CALENDAR_SAVED": "Calendario salvato",
+        "CHOOSE_AN_EXTERNAL_CALENDAR_TO_LINK": "Scegli un calendario esterno da configurare",
+        "COLOR": "Colore distintivo",
+        "CREATE_PRIVATE_OR_TEAM": "Vuoi creare un calendario privato o condiviso col team?",
+        "DANGEROUS_ZONE": "Zona pericolosa",
+        "DEFAULT_PERSONAL_CALENDAR_NAME": "Il mio calendario",
+        "DEFAULT_TEAM_CALENDAR_NAME": "Il calendario del mio team",
+        "DELETE_CALENDAR": "Elimina calendario",
+        "DELETE_CALENDAR_HINT": "Attenzione! Il calendario e i relativi appuntamenti saranno eliminati in un'operazione non reversibile!",
+        "DESCRIPTION": "Descrizione",
+        "DESCRIPTION_HINT": "Descrizione del calendario",
+        "DONT_LINK": "Non collegare",
+        "DONT_LINK_HINT": "Il calendario non sarà  sincronizzato con un servizio esterno",
+        "WHICH_EXTERNAL_SERVICE_TO_LINK": "Quale servizio esterno vuoi collegare al calendario?",
+        "WHICH_EXTERNAL_SERVICE_TO_LINK_HINT": "Nota bene: non puoi cambiare questa configurazione in seguito",
+        "DO_YOU_WANT_PROCEED_LINKING_OR_DELETE": "Vuoi provare ancora a collegarlo o preferisci eliminarlo?",
+        "EDIT_CALENDAR": "Modifica calendario",
+        "EVERYONE": "Tutti",
+        "FIRST_SYNC_COMPLETED": "Il calendario è stato sincronizzato",
+        "FIRST_SYNC_MAY_TAKE_A_WHILE": "La prima sincronizzazione è in corso (potrebbe volerci un po')...",
+        "INFO_ON_CALENDAR": "Altre informazioni",
+        "LINK": "Collega",
+        "LINKED_TO": "Calendario collegato a",
+        "LINKING_CALENDAR": "Collegamento calendario",
+        "LINKING_CALENDAR_CONFIRM_ONCE_DONE": "Segui la procedura del servizio esterno e conferma qui una volta fatto",
+        "LINK_TO": "Collega a",
+        "LINK_TO_HINT": "Sincronizza gli appuntamenti con un calendario esterno",
+        "NAME": "Nome",
+        "NAME_HINT": "Nome del calendario",
+        "NOBODY": "Nessuno",
+        "NO_CALENDARS": "Nessun calendario",
+        "PERSONAL_CALENDAR": "Calendario personale",
+        "PERSONAL_CALENDARS": "Calendari personali",
+        "PERSONAL_CALENDARS_HINT": "Questi calendari e i relativi appuntamenti sono visibili solo a te",
+        "PERSONAL_CALENDAR_HINT": "Il calendario e i relativi appuntamenti sono visibili solo a te",
+        "SERVICES": { "GOOGLE": "Google Calendar", "MICROSOFT": "Microsoft Outlook" },
+        "TAP_TO_CONFIGURE": "Tocca per configurare",
+        "TEAM_CALENDAR": "Calendario di {{team}}",
+        "TEAM_CALENDARS": "Calendari di {{team}}",
+        "TEAM_CALENDARS_HINT": "Questi calendari e i loro appuntamenti sono visibili all'intero team",
+        "TEAM_CALENDAR_HINT": "Questi calendari e i loro appuntamenti sono visibili all'intero team",
+        "USERS_ALLOWED_TO_MANAGE_APPOINTMENTS": "Utenti che possono gestire gli appuntamenti",
+        "WHO_CAN_MANAGE_APPOINTMENTS": "Chi può gestire gli appuntamenti",
+        "SET_AS_DEFAULT": "Rendi predefinito",
+        "SET_AS_DEFAULT_HINT": "Seleziona il calendario come predefinito: sarà il primo a essere suggerito in agenda",
+        "DEFAULT": "Predefinito"
+      }
     },
     "ATTACHMENTS": {
       "ERROR_OPENING_ATTACHMENT": "Errore nell'apertura dell'allegato",
