Echo: fixed "exit behaviour"

--- a/assets/i18n/idea/it.json
+++ b/assets/i18n/idea/it.json
@@ -280,14 +280,14 @@
     "DOWNLOAD": { "TAP_TO_DOWNLOAD": "Tocca per scaricare il file" },
     "DURATION": { "HH": "ore", "HOURS": "Ore", "MINUTES": "Minuti", "MM": "min", "SECONDS": "Secondi", "SS": "sec" },
     "ECHO": {
+      "INVALID_ACTION": "Azione non valida",
+      "YOU_CAN_CLOSE_THE_PAGE": "Puoi chiudere questa pagina ora.",
       "ACCOUNT_CONFIRMED": "Account confermato: puoi procedere con il login.",
       "EMAIL_CHANGED": "Indirizzo email cambiato con successo. Dovrai ora autenticarti nuovamente.",
       "EXTERNAL_CALENDARS_SOURCE_INTEGRATION_ERROR": "Errore nel collegamento all'account esterno; riprovare",
       "EXTERNAL_CALENDARS_SOURCE_INTEGRATION_SUCCESS": "L'account esterno è stato collegato. Torna alla pagina dei calendari per completare la configurazione",
       "GITHUB_SOURCE_INTEGRATION_ERROR": "Errore nell'integrazione di GitHub; riprovare.",
       "GITHUB_SOURCE_INTEGRATION_SUCCESS": "GitHub è stato collegato. Puoi ora terminare la configurazione.",
-      "GO_TO_HOME_HINT": "Clicca per andare alla pagina iniziale del servizio",
-      "HOMEPAGE": "Torna alla pagina iniziale",
       "REQUEST_FAILED": "La richiesta specificata è fallita; riprovare.",
       "TEAM_JOINED": "Ti sei unito al team con successo.",
       "TRELLO_SOURCE_INTEGRATION_ERROR": "Errore nell'integrazione di Trello; riprovare.",
