--- a/assets/i18n/idea/en.json
+++ b/assets/i18n/idea/en.json
@@ -280,14 +280,14 @@
     "DOWNLOAD": { "TAP_TO_DOWNLOAD": "Tap to download the file" },
     "DURATION": { "HH": "hh", "HOURS": "Hours", "MINUTES": "Minutes", "MM": "mm", "SECONDS": "Seconds", "SS": "ss" },
     "ECHO": {
+      "INVALID_ACTION": "Invalid action",
+      "YOU_CAN_CLOSE_THE_PAGE": "You can close this page now.",
       "ACCOUNT_CONFIRMED": "Account confirmed: you can now sign-in.",
       "EMAIL_CHANGED": "Email address successfully updated. You now have to sign-in again.",
       "EXTERNAL_CALENDARS_SOURCE_INTEGRATION_ERROR": "Error while linking the external account; try again",
       "EXTERNAL_CALENDARS_SOURCE_INTEGRATION_SUCCESS": "The external account is now linked. Go back to the calendars page to complete the configuration",
       "GITHUB_SOURCE_INTEGRATION_ERROR": "Error during the integration of GitHub; try again.",
       "GITHUB_SOURCE_INTEGRATION_SUCCESS": "GitHub has been connected. You can now complete the configuration.",
-      "GO_TO_HOME_HINT": "Click to go to the homepage of the service",
-      "HOMEPAGE": "Back to the homepage",
       "REQUEST_FAILED": "The request failed; try again.",
       "TEAM_JOINED": "You successfully joined the team.",
       "TRELLO_SOURCE_INTEGRATION_ERROR": "Error during the integration of Trello; try again.",
