Agenda: improved calendars scope and permissions

--- a/assets/i18n/idea/en.json
+++ b/assets/i18n/idea/en.json
@@ -108,8 +108,8 @@
         "PERSONAL_CALENDAR_HINT": "The calendars and its appointments are visible only to you",
         "SERVICES": { "GOOGLE": "Google Calendar", "MICROSOFT": "Microsoft Outlook" },
         "TAP_TO_CONFIGURE": "Tap here to configure",
-        "TEAM_CALENDAR": "{{team}}'s calendars",
-        "TEAM_CALENDARS": "{{team}}'s calendars",
+        "TEAM_CALENDAR": "Team calendar",
+        "TEAM_CALENDARS": "Team calendars",
         "TEAM_CALENDARS_HINT": "These calendars and their appointments are visible to the whole team",
         "TEAM_CALENDAR_HINT": "The calendar and its appointments are visible to the whole team",
         "USERS_ALLOWED_TO_MANAGE_APPOINTMENTS": "Users who can manage appointments",
