--- a/assets/i18n/idea/it.json
+++ b/assets/i18n/idea/it.json
@@ -108,8 +108,8 @@
         "PERSONAL_CALENDAR_HINT": "Il calendario e i relativi appuntamenti sono visibili solo a te",
         "SERVICES": { "GOOGLE": "Google Calendar", "MICROSOFT": "Microsoft Outlook" },
         "TAP_TO_CONFIGURE": "Tocca per configurare",
-        "TEAM_CALENDAR": "Calendario di {{team}}",
-        "TEAM_CALENDARS": "Calendari di {{team}}",
+        "TEAM_CALENDAR": "Calendario del team",
+        "TEAM_CALENDARS": "Calendari del team",
         "TEAM_CALENDARS_HINT": "Questi calendari e i loro appuntamenti sono visibili all'intero team",
         "TEAM_CALENDAR_HINT": "Questi calendari e i loro appuntamenti sono visibili all'intero team",
         "USERS_ALLOWED_TO_MANAGE_APPOINTMENTS": "Utenti che possono gestire gli appuntamenti",
