Components use new action sheet ctrl

--- a/assets/i18n/idea/en.json
+++ b/assets/i18n/idea/en.json
@@ -357,7 +357,7 @@
       "DOWNLOAD_RESOURCES_EXPLANATION": "List of the resources available offline",
       "ERROR_DURING_LAST_SYNC": "There was an error during the last synchronisation; please try again.",
       "FEATURES_REDUCED_CONTENTS_NOT_UP_TO_DATE": "Functionality is reduced and contents may be not up to date",
-      "FORCE_FULL_SYNC": "Force full synchronisation",
+      "FORCE_FULL_SYNC": "Full synchronisation",
       "FULL_SYNC_DISCLAIMER": "All the offline data will be removed and the operation could take several minutes",
       "HUGE_SYNC_NEED_MANUAL_CONFIRMATION": "There is a lot of data to synchronise. Confirm to proceed.",
       "LAST_SYNC": "Last synchronisation",
@@ -404,7 +404,7 @@
       "ACTIONS_ON_THE_RESOURCE": "Actions on the resource",
       "OPEN_RESOURCE": "Open the current version of the resource",
       "LASTLY_UPDATED_X_AGO": "Lastly updated {{time}}",
-      "UPLOAD_NEW_VERSION": "Upload a new version",
+      "UPLOAD_NEW_VERSION": "Upload new version",
       "ACTIONS_ON_RESOURCE": "Actions on the resource",
       "RENAME_FOLDER": "Rename folder",
       "RENAME_RESOURCE": "Rename resource",
@@ -503,10 +503,10 @@
       "INVITE_USER": "Invite a user",
       "INVITE_USER_HINT": "Invite a member to the team",
       "IS_OWNER": "The user is the current owner of the team",
-      "KICK_OUT": "Kick-out the user",
+      "KICK_OUT": "Kick-out user",
       "MAIN_EXPLANATION": "The users in your team. You can manage their permissions and add new users",
-      "MAKE_USER_ADMIN": "Make the user administrator",
-      "REMOVE_ADMIN_ROLE": "Remove the administrator role",
+      "MAKE_USER_ADMIN": "Make administrator",
+      "REMOVE_ADMIN_ROLE": "Remove from administrators",
       "MEMBERS": "Members",
       "NEW_TEAM": "New team",
       "OWNER": "Owner",
