--- a/assets/i18n/idea/it.json
+++ b/assets/i18n/idea/it.json
@@ -357,7 +357,7 @@
       "DOWNLOAD_RESOURCES_EXPLANATION": "Lista delle risorse disponibili quando offline",
       "ERROR_DURING_LAST_SYNC": "Si è verificato un errore durante l'ultima sincronizzazione; per favore riprova.",
       "FEATURES_REDUCED_CONTENTS_NOT_UP_TO_DATE": "Le funzionalità  sono ridotte e i contenuti potrebbero non essere aggiornati",
-      "FORCE_FULL_SYNC": "Forza sincronizzazione completa",
+      "FORCE_FULL_SYNC": "Sincronizzazione da zero",
       "FULL_SYNC_DISCLAIMER": "Tutti i dati offline verranno eliminati e l'operazione potrebbe richiedere diversi minuti",
       "HUGE_SYNC_NEED_MANUAL_CONFIRMATION": "Sono presenti molti dati da sincronizzare. Conferma se vuoi continuare.",
       "LAST_SYNC": "Ultima sincronizzazione",
@@ -404,7 +404,7 @@
       "ACTIONS_ON_THE_RESOURCE": "Azioni sulla risorsa",
       "OPEN_RESOURCE": "Apri la versione corrente della risorsa",
       "LASTLY_UPDATED_X_AGO": "Aggiornato {{time}}",
-      "UPLOAD_NEW_VERSION": "Carica una nuova versione",
+      "UPLOAD_NEW_VERSION": "Carica nuova versione",
       "ACTIONS_ON_RESOURCE": "Azioni sulla risorsa",
       "RENAME_FOLDER": "Rinomina cartella",
       "RENAME_RESOURCE": "Rinomina risorsa",
@@ -503,10 +503,10 @@
       "INVITE_USER": "Invita un utente",
       "INVITE_USER_HINT": "Invita un nuovo utente",
       "IS_OWNER": "È l'attuale proprietario del team",
-      "KICK_OUT": "Rimuovi l'utente dal team",
+      "KICK_OUT": "Rimuovi dal team",
       "MAIN_EXPLANATION": "Gli utenti del tuo team. Puoi gestire i loro permessi o aggiungere nuovi utenti",
-      "MAKE_USER_ADMIN": "Rendi l'utente amministratore",
-      "REMOVE_ADMIN_ROLE": "Rimuovi il ruolo di amministratore",
+      "MAKE_USER_ADMIN": "Rendi amministratore",
+      "REMOVE_ADMIN_ROLE": "Rimuovi da amministratori",
       "MEMBERS": "Membri",
       "NEW_TEAM": "Nuovo team",
       "OWNER": "Proprietario",
