New: PDF template

--- a/assets/i18n/idea/it.json
+++ b/assets/i18n/idea/it.json
@@ -377,6 +377,40 @@
       "UPLOAD_QUEUE_REQUESTS_EXPLANATION": "Lista delle azioni create offline che devono essere caricate online",
       "YOU_ARE_OFFLINE": "Sei offline"
     },
+    "PDF_TEMPLATE": {
+      "EDIT_TEMPLATE": "Modifica template",
+      "BREADCRUMB_I": "Qui sopra viene indicato in quale area del template stai lavorando.",
+      "BREADCRUMB_II": "Puoi navigare aree interne del template toccandole.",
+      "NAVIGATE_BACK": "Naviga indietro",
+      "SECTION": "Sezione",
+      "ADD_A_SECTION": "Aggiungi una nuova sezione al template",
+      "REMOVE_SECTION": "Rimuovi la sezione dal template",
+      "SECTIONS": "Sezioni",
+      "EDIT_SECTIONS": "Modifica le sezioni",
+      "INSERT_FIELDS_IN_NORMAL_SECTION": "Puoi aggiungere campi nel template toccando una colonna vuota in una riga.",
+      "PAGE_BREAK": "Salto pagina",
+      "PAGE_BREAK_I": "Vai alla pagina successiva dopo questa riga",
+      "BLANK_ROW": "Riga vuota",
+      "BLANK_ROW_I": "Visualizza una riga vuota, per spaziare i contenuti",
+      "HEADER": "Intestazione",
+      "HEADER_I": "Riga di intestazione per separare due aree del template",
+      "INNER_SECTION": "Sezione interna",
+      "INNER_SECTION_I": "Sezione figlia dell'attuale, per gestire i campi di un altro contesto",
+      "REPEATED_INNER_SECTION": "Sezione interna ripetuta",
+      "REPEATED_INNER_SECTION_I": "Sezione figlia dell'attuale, per gestire i campi di un altro contesto; in base ai dati disponibili, potrebbe essere ripetuta in fase di stampa",
+      "NO_SECTION_DEFINED_YET_HERE": "Nessuna sezione definita qui; puoi aggiungerne tramite i tasti azione in alto.",
+      "NORMAL_ROW": "Riga normale",
+      "WHAT_DO_YOU_WANT_TO_INSERT": "Cosa vuoi inserire?",
+      "NEW_HEADER": "Nuova intestazione",
+      "YOU_CAN_INSERT_SPECIAL_SECTIONS": "In base alla tua posizione nel template, potrai aggiungere tipi di sezione diverse.",
+      "SIMPLE_FIELD": "Campo semplice",
+      "COMPLEX_FIELD": "Campo complesso",
+      "WHAT_DO_YOU_WANT_TO_DO_WITH_FIELD": "Cosa vuoi fare col campo?",
+      "NO_EMPTY_SLOT_WHERE_TO_MOVE_FIELD": "Non c'è nessuno spazio vuoto dove spostare il campo; aggiungi una nuova riga.",
+      "CHOOSE_WHERE_TO_MOVE_FIELD": "Scegli dove spostare il campo",
+      "SIZE": "Dimensione",
+      "ONE_OR_MORE_SECTIONS_HAVE_ERRORS": "Una o più sezione hanno errori; verifica prima di procedere."
+    },
     "RESOURCE_CENTER": {
       "SEARCH_FOR_FOLDERS": "Filtra le cartelle del tuo Resource Center",
       "CREATE_NEW_FOLDER": "Crea una nuova cartella",
