--- a/assets/i18n/idea/en.json
+++ b/assets/i18n/idea/en.json
@@ -377,6 +377,40 @@
       "UPLOAD_QUEUE_REQUESTS_EXPLANATION": "Resources created offline that must be uploaded online",
       "YOU_ARE_OFFLINE": "You are offline"
     },
+    "PDF_TEMPLATE": {
+      "EDIT_TEMPLATE": "Edit template",
+      "BREADCRUMB_I": "Here above you can see on which area of the template you are working.",
+      "BREADCRUMB_II": "You can navigate inner areas of the template by touching them.",
+      "NAVIGATE_BACK": "Navigate back",
+      "SECTION": "Section",
+      "ADD_A_SECTION": "Add a new section to the template",
+      "REMOVE_SECTION": "Remove the section from the template",
+      "SECTIONS": "Sections",
+      "EDIT_SECTIONS": "Edit the sections",
+      "INSERT_FIELDS_IN_NORMAL_SECTION": "You can add fields in the template by tapping an empty column in a row.",
+      "PAGE_BREAK": "Page break",
+      "PAGE_BREAK_I": "Go to a new page after this row",
+      "BLANK_ROW": "Blank row",
+      "BLANK_ROW_I": "View an empty row, to create space between contents",
+      "HEADER": "Header",
+      "HEADER_I": "Header row, to separate two areas of the template",
+      "INNER_SECTION": "Inner section",
+      "INNER_SECTION_I": "Child section of the current one; used to manage fields of an inner context",
+      "REPEATED_INNER_SECTION": "Repeated inner section",
+      "REPEATED_INNER_SECTION_I": "Child section of the current one; used to manage fields of an inner context. Based on the data available, it could be repeated more times when printed.",
+      "NO_SECTION_DEFINED_YET_HERE": "No section defined here; you can add one through the action buttons above.",
+      "NORMAL_ROW": "Normal row",
+      "WHAT_DO_YOU_WANT_TO_INSERT": "What do you want to insert?",
+      "NEW_HEADER": "New header",
+      "YOU_CAN_INSERT_SPECIAL_SECTIONS": "Based on your position in the template, you will be able to add different kind of sections.",
+      "SIMPLE_FIELD": "Simple field",
+      "COMPLEX_FIELD": "Complex field",
+      "WHAT_DO_YOU_WANT_TO_DO_WITH_FIELD": "What do you want to do with the field?",
+      "NO_EMPTY_SLOT_WHERE_TO_MOVE_FIELD": "There's no an empty slot where the field can be moved. Add a new row.",
+      "CHOOSE_WHERE_TO_MOVE_FIELD": "Choose where to move the field",
+      "SIZE": "Size",
+      "ONE_OR_MORE_SECTIONS_HAVE_ERRORS": "One or more sections have errors; please check before to continue."
+    },
     "RESOURCE_CENTER": {
       "SEARCH_FOR_FOLDERS": "Filter your Resource Center's folders",
       "CREATE_NEW_FOLDER": "Create a new folder",
