--- a/i18n/auth/es.json
+++ b/i18n/auth/es.json
@@ -1,9 +1,9 @@
 {
   "IDEA_AUTH": {
-    "AGREEMENTS_CHECK_LOGIN": "\nAl iniciar sesión, acepto",
-    "AGREEMENTS_CHECK_REGISTRATION": "\nAl crear mi cuenta, acepto",
+    "AGREEMENTS_CHECK_LOGIN": "Al iniciar sesión, acepto",
+    "AGREEMENTS_CHECK_REGISTRATION": "Al crear mi cuenta, acepto",
     "ALREADY_HAVE_A_RESET_CODE": "¿Ya tienes un código de restablecimiento?",
-    "ALREADY_HAVE_A_RESET_CODE_HINT": "\nSi ya tiene un código de reinicio, continúe y cambie su contraseña",
+    "ALREADY_HAVE_A_RESET_CODE_HINT": "Si ya tiene un código de reinicio, continúe y cambie su contraseña",
     "AUTHENTICATION_FAILED": "La autenticación ha fracasado",
     "BACK_TO_REGISTRATION": "Vuelve a la registración",
     "BACK_TO_SIGN_IN": "Vuelva al acceso",
@@ -18,18 +18,18 @@
     "CONFIRM_NEW_PASSWORD": "Cofirma la nueva contraseña",
     "CONFIRM_NEW_PASSWORD_HINT": "Confirme la contraseña elegida y continúe",
     "CONFIRM_PASSWORD_ERROR": "Usuario no encontrado, el código no es correcto o la contraseña es demasiado simple",
-    "CONFIRM_YOUR_EMAIL_TO_LOGIN": "\nAntes de iniciar sesión, debe confirmar la dirección de correo electrónico que proporcionó; verifique en su bandeja de entrada o en la carpeta SPAM",
+    "CONFIRM_YOUR_EMAIL_TO_LOGIN": "Antes de iniciar sesión, debe confirmar la dirección de correo electrónico que proporcionó; verifique en su bandeja de entrada o en la carpeta SPAM",
     "CREATE_AN_ACCOUNT": "Crea una cuenta",
-    "CREATE_AN_ACCOUNT_HINT": "\nIr a la página de registro",
+    "CREATE_AN_ACCOUNT_HINT": "Ir a la página de registro",
     "EMAIL": "Correo electrónico",
-    "EMAIL_HINT": "\nLa dirección de correo electrónico que usó para registrarse",
+    "EMAIL_HINT": "La dirección de correo electrónico que usó para registrarse",
     "EMAIL_OBLIGATORY": "La dirección del correo electrónico es obligatoria",
     "ERROR": "Error",
     "HAVEN_T_RECEIVED_A_RESET_CODE": "¿Aún no has recibido el código de restablecimiento?",
-    "HAVEN_T_RECEIVED_A_RESET_CODE_HINT": "\nSi aún no ha recibido su código de reinicio, repita el procedimiento",
-    "HAVEN_T_RECEIVED_CONFIRMATION_LINK": "\nNo he recibido el enlace de confirmación.",
-    "HAVEN_T_RECEIVED_CONFIRMATION_LINK_HINT": "\nSi aún no ha recibido el enlace de confirmación, repita el procedimiento",
-    "IDEA_TAGLINE": "\nSomos tu brillante IDEA",
+    "HAVEN_T_RECEIVED_A_RESET_CODE_HINT": "Si aún no ha recibido su código de reinicio, repita el procedimiento",
+    "HAVEN_T_RECEIVED_CONFIRMATION_LINK": "No he recibido el enlace de confirmación.",
+    "HAVEN_T_RECEIVED_CONFIRMATION_LINK_HINT": "Si aún no ha recibido el enlace de confirmación, repita el procedimiento",
+    "IDEA_TAGLINE": "Somos tu brillante IDEA",
     "IS_THE_EMAIL_CORRECT": "¿Es correcto el correo electrónico?",
     "I_FORGOT_MY_PASSWORD": "Se me ha olvidado la contraseña",
     "I_FORGOT_MY_PASSWORD_HINT": "Recuperar contraseña",
@@ -43,7 +43,7 @@
     "PASSWORD_RESET_CODE_SENT": "Se ha enviado el código para restablecer la contraseña por correo electrónico",
     "PASSWORD_RESET_HINT": "Escribe tu nombre de usuario o tu correo electrónico para solicitar el restablecimiento de la contraseña",
     "PRIVACY_POLICY": "Política de Privacidad",
-    "PRIVACY_POLICY_HINT": "\nLea nuestra política de privacidad",
+    "PRIVACY_POLICY_HINT": "Lea nuestra política de privacidad",
     "REGISTER_A_NEW_ACCOUNT_TO_THE_SYSTEM": "Registra una cuenta nueva en el sistema",
     "REGISTRATION_COMPLETED": "Registración completa: puedes proceder para acceder",
     "REGISTRATION_EMAIL_HINT": "Elija una dirección de correo electrónico para usar",
