Checker: secondary toolbar

--- a/i18n/common/en.json
+++ b/i18n/common/en.json
@@ -40,7 +40,8 @@
       "NO_ELEMENTS_FOUND": "No elements found",
       "NUM_ELEMENTS_SELECTED": "{{num}} elements selected",
       "SEARCH": "Search",
-      "SELECT_ALL": "Select all"
+      "SELECT_ALL": "Select all",
+      "RESET": "Reset"
     },
     "CONTACTS": {
       "EMAIL": "Email",
