--- a/i18n/common/it.json
+++ b/i18n/common/it.json
@@ -40,7 +40,8 @@
       "NO_ELEMENTS_FOUND": "Nessun elemento trovato",
       "NUM_ELEMENTS_SELECTED": "{{num}} elementi selezionati",
       "SEARCH": "Ricerca",
-      "SELECT_ALL": "Seleziona tutto"
+      "SELECT_ALL": "Seleziona tutto",
+      "RESET": "Reset"
     },
     "CONTACTS": {
       "EMAIL": "Email",
