--- a/i18n/common/pt.json
+++ b/i18n/common/pt.json
@@ -41,7 +41,8 @@
       "NUM_ELEMENTS_SELECTED": "{{num}} elementos selecionados",
       "SEARCH": "Pesquisar",
       "SELECT_ALL": "Seleciona tudo",
-      "RESET": "Redefinir"
+      "RESET": "Redefinir",
+      "LIMIT_OF_NUM": "(de {{num}})"
     },
     "CONTACTS": {
       "EMAIL": "E-mail",
