Nuova gestione team IDEA #33

--- a/i18n/teams/es.json
+++ b/i18n/teams/es.json
@@ -50,41 +50,10 @@
       "VERSION_ATTACHED_IS_OLDER": "El recurso se ha actualizado desde que se adjuntó"
     },
     "TEAMS": {
-      "ACTIONS_ON_USER_": "Acciones en {{usuario}}",
-      "ADMIN": "Administrador",
-      "CANCEL": "Cancelar",
-      "CAN_MANAGE_TEAM": "El usuario puede editar la configuración del grupo y administrar los miembros del grupo.",
-      "COULDNT_LOAD_LIST": "No se pudo cargar la lista",
-      "CREATE": "Crear",
-      "CREATE_TEAM_HINT": "Crear un nuevo grupo",
       "CURRENT": "Actual",
       "CURRENT_TEAM_EXPLANATION": "Seleccionar grupo actual",
-      "DELETION_OPERATION_FAILED": "La operación falló; asegúrese de que el usuario no tenga membresías activas en otros servicios",
-      "EMAIL_TO_INVITE": "La dirección de correo electrónico del usuario.",
-      "INVITE": "Invitación",
-      "INVITED": "Invitado",
-      "INVITE_SENT": "Mandar invitación",
-      "INVITE_USER": "Invitar a un usuario",
-      "INVITE_USER_HINT": "Invitar a un miembro del grupo",
-      "IS_OWNER": "El usuario es el actual propietario del grupo.",
-      "KICK_OUT": "Expulsar al usuario",
-      "MAIN_EXPLANATION": "Los usuarios de tu grupo. Puede administrar sus permisos y agregar nuevos usuarios",
-      "MANAGE_PERMISSIONS": "Administra los permisos",
-      "MEMBERS": "Miembros",
-      "NEW_TEAM": "Nuevo grupo",
-      "OWNER": "Propietario",
-      "PENDING_INVITATION": "El usuario ha sido invitado al grupo pero aún no ha aceptado.",
       "SELECT_A_TEAM": "Seleccionar grupo",
-      "SELECT_NAME_FOR_NEW_TEAM": "Elegir un nombre",
-      "SELECT_TEAM_": "Seleccional un grupo {{team}}",
-      "TEAM_MEMBERS": "Miembros del grupo",
-      "TEAM_MEMBERS_HINT": "Administrar los miembros del grupo {{equipo}}",
-      "TEAM_NAME": "Nombre del grupo",
-      "TEAM_NOT_ACTIVATED_DISCLAIMER": "El grupo aún no se ha activado; contactar a un administrador",
-      "TEAM_SETTINGS": "Configure los ajustes del grupo {{equipo}}",
-      "UNJOIN": "Dejar el grupo",
-      "USER_NOT_FOUND_OR_ALREADY_JOINED": "El usuario ya forma parte del grupo.",
-      "USER_REMOVED": "Usuario eliminado",
+      "SELECT_TEAM_": "Seleccional el grupo {{team}}",
       "YOU_NEED_A_TEAM_TO_CONTINUE": "Necesites de un equipe para continuar",
       "NO_TEAMS_AVAILABLE": "No tienes equipos disponibles"
     }
