--- a/i18n/teams/pt.json
+++ b/i18n/teams/pt.json
@@ -50,41 +50,11 @@
       "VERSION_ATTACHED_IS_OLDER": "O recurso foi atualizado desde que foi anexado"
     },
     "TEAMS": {
-      "ACTIONS_ON_USER_": "Ações no {{user}}",
-      "ADMIN": "Admin",
-      "CANCEL": "Cancelar",
-      "CAN_MANAGE_TEAM": "O utilizador pode editar as configurações de equipa e gerir os membros de equipa",
-      "COULDNT_LOAD_LIST": "Não foi possível carregar a lista",
-      "CREATE": "Criar",
-      "CREATE_TEAM_HINT": "Criar uma nova equipa",
       "CURRENT": "Atual",
       "CURRENT_TEAM_EXPLANATION": "Equipa selecionada atualmente",
-      "DELETION_OPERATION_FAILED": "A operação falhou; Verifique se o utilizador não é membro ativo de outros serviços",
-      "EMAIL_TO_INVITE": "O endereço de e-mail do utilizador",
-      "INVITE": "Convidar",
-      "INVITED": "Convidado",
-      "INVITE_SENT": "Convite enviado",
-      "INVITE_USER": "Convidar um utilizador",
-      "INVITE_USER_HINT": "Convidar um membro para a equipa",
-      "IS_OWNER": "O utilizador é o atual dono da equipa",
-      "KICK_OUT": "Expulsar o utilizador",
-      "MAIN_EXPLANATION": "Os utilizadores na tua equipa. Você pode gerir as suas permissões e adicionar novos utilizadores",
-      "MANAGE_PERMISSIONS": "Gerir as permissões",
-      "MEMBERS": "Membros",
-      "NEW_TEAM": "Novo team",
-      "OWNER": "Proprietário",
-      "PENDING_INVITATION": "Abrir a versão anterior",
       "SELECT_A_TEAM": "Selecionar um team",
-      "SELECT_NAME_FOR_NEW_TEAM": "Expirado",
-      "SELECT_TEAM_": "Seleciona um team ",
-      "TEAM_MEMBERS": "Membros do team",
-      "TEAM_MEMBERS_HINT": "Gerir os membros da equipa {{team}}",
-      "TEAM_NAME": "Nome da equipa",
+      "SELECT_TEAM_": "Seleciona team {{team}}",
       "TEAM_NOT_ACTIVATED_DISCLAIMER": "A equipa ainda não foi ativada; contacte um administrador",
-      "TEAM_SETTINGS": "Gerir as configurações da equipa {{team}}",
-      "UNJOIN": "Abandonar a equipa",
-      "USER_NOT_FOUND_OR_ALREADY_JOINED": "O utilizador já faz parte da equipa",
-      "USER_REMOVED": "Utilizador removido",
       "YOU_NEED_A_TEAM_TO_CONTINUE": "Precisas de um team para continuar",
       "NO_TEAMS_AVAILABLE": "Você não tem equipes disponíveis"
     }
