feat(time-interval): switch between am/pm https://github.com/iter-idea/scarlett/issues/442

--- a/i18n/common/en.json
+++ b/i18n/common/en.json
@@ -141,7 +141,8 @@
       "TO": "To",
       "AM": "AM",
       "PM": "PM",
-      "MINUTES_PREFERENCE": "Minutes preference"
+      "MINUTES_PREFERENCE": "Minutes preference",
+      "PERIOD": "Period"
     },
     "LABELER": {
       "EXPLANATION_OBLIGATORY": "Only the translation in the default language is mandatory.",
